--- a/index.html
+++ b/index.html
@@ -169,20 +169,14 @@
         </div>
 
         <div class="row container">
-          <div class="col s12 m6\12 center">
-           <!-- <h5>Trailer</h5>
-              <video class="responsive-video" controls>
-                <source src="Videos/flatearth_PromotionalVideo.mp4" type="video/mp4">
-              </video>
+          <div class="col s12 center">
+           <h5>Odyssey Trailer</h5>
+            <div class="video-container">
+              <script>var url = url.replace("watch?v=", "v/");</script>
+              <iframe src="https://www.youtube.com/embed/7ERNSiiaupc" frameborder="0" allowfullscreen></iframe>
+            </div>
               <p>Learn about what your mission for ARC is really about.</p>
           </div>
-          <!--<div class="col s12 m6 center">
-            <h5>Gameplay</h5>
-              <video class="responsive-video" controls>
-                <source src="Videos/flatearth_PromotionalVideo.mp4" type="video/mp4">
-              </video>
-              <p>Jump in and experience gameplay.</p>
-          </div>-->
         </div>
       </div>
 
