New Cover Video

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="row center ">
         <!-- Start of autoplayVideo--> 
             <video autoplay loop muted class="banner__video">
-             <source src="Videos/coverVideo.mp4" type="video/mp4">
+             <source src="Videos/COVER.mp4" type="video/mp4">
             </video>
             
             <object class="center" id="my-svg" type="image/svg+xml" data="odyssey_animated.svg" style="padding-right:25px;"></object>      
@@ -172,7 +172,6 @@
           <div class="col s12 center">
            <h5>Odyssey Trailer</h5>
             <div class="video-container">
-              <script>var url = url.replace("watch?v=", "v/");</script>
               <iframe src="https://www.youtube.com/embed/7ERNSiiaupc" frameborder="0" allowfullscreen></iframe>
             </div>
               <p>Learn about what your mission for ARC is really about.</p>
