Mobile nav odyssey

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <nav class=" pushpin-nav blue-grey darken-3" data-target="barnav" style="z-index: 10000;">
     <div class="nav-wrapper">
      
-    <a id="logo-container" href="#" class="brand-logo white-text light center hide-on-small-only" style="font-family: 'Lato', sans-serif,; font-weight: 100;">ODYSSEY</a>
+    <a id="logo-container" href="#" class="brand-logo white-text light center" style="font-family: 'Lato', sans-serif,; font-weight: 100;">ODYSSEY</a>
 
 
       <div class="hide-on-med-and-down">
